.ci/generated/pagespec_041_build.log
[1/11] Download verified PageSpec 0.4.0 source and workflows
[2/11] Apply focused 0.4.1 fixes
  File "/home/runner/work/download/download/.ci/pagespec_041_patch.py", line 243
    bootstrap = f'''<script nonce="{nonce_attr}">(function(){{
                            ^^^^^
SyntaxError: invalid syntax
